Tue Aug 14 11:02:10 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ccm/Session/CCM_session.mpc:
          Simplified this mpc file, the base project should do the trick

Mon Aug 13 07:01:37 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/idl/dds/opendds_lem_stub.mpc:
          Fixed install location

Sun Aug 12 19:07:08 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * MPC/config/dds4ccm.mpb:
        * connectors/dds4ccm/idl/dds:
        * connectors/dds4ccm/idl/dds/opendds_lem_stub.mpc:
        * connectors/dds4ccm/idl/OpenDDS:
        * connectors/dds4ccm/idl/OpenDDS/opendds_lem_stub.mpc:
          Moved OpenDDS to dds and made some more changes to improve the
          lem generation for OpenDDS

Fri Aug 10 11:59:55 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/Deployment/Interceptors/Deployment_Interceptors.cpp:
          Fixed debug message

Thu Aug  9 07:15:33 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/idl/OpenDDS/opendds_lem_stub.mpc:
          Fixed windows problems

Tue Aug  7 12:47:24 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/Deployment/Handlers/CIAO_Handler_Common.cpp:
        * ciao/Deployment/Handlers/Connection_Handler.cpp:
          Fixed incorrect debug statements

Tue Aug  7 12:37:45 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/Deployment/Handlers/Component_Handler.cpp:
          Fixed incorrect debug statements

        * ciao/Deployment/Interceptors/Name_Utilities.h:
          Layout changes

Tue Aug  7 08:01:29 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/idl/OpenDDS/opendds_lem_stub.mpc:
          Added missing base to get the library installed

Mon Aug  6 18:22:22 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * MPC/config/dds4ccm.mpb:
        * connectors/dds4ccm/idl/OpenDDS/opendds_lem_stub.mpc: