@@ -6,6 +6,43 @@ namespace CIAO
 {
   namespace NDDS
   {
+    DDS_TypeFactory_i_var::DDS_TypeFactory_i_var (
+      DDS_TypeFactory_i* tf)
+      : ref_count_ (1),
+        tf_ (tf)
+    {
+      DDS4CCM_TRACE ("DDS_TypeFactory_i_var::DDS_TypeFactory_i_var");
+    }
+
+    DDS_TypeFactory_i_var::~DDS_TypeFactory_i_var (void)
+    {
+      DDS4CCM_TRACE ("DDS_TypeFactory_i_var::~DDS_TypeFactory_i_var");
+    }
+
+    DDS_TypeFactory_i*
+    DDS_TypeFactory_i_var::get_factory ()
+    {
+      DDS4CCM_TRACE ("DDS_TypeFactory_i_var::get_typefactory");
+
+      return tf_;
+    }
+
+    long
+    DDS_TypeFactory_i_var::_inc_ref ()
+    {
+      DDS4CCM_TRACE ("DDS_TypeFactory_i_var::_inc_ref");
+
+      return ++this->ref_count_;
+    }
+
+    long
+    DDS_TypeFactory_i_var::_dec_ref ()
+    {
+      DDS4CCM_TRACE ("DDS_TypeFactory_i_var::_dec_ref");
+
+      return --this->ref_count_;
+    }
+
     std::map < ::DDS::DomainParticipant_ptr, ::CIAO::NDDS::DDS_TypeSupport_i::typefactories >
       CIAO::NDDS::DDS_TypeSupport_i::participant_factories;
 
@@ -14,66 +51,66 @@ namespace CIAO
     }
 
     DDS_TypeFactory_i*
-    DDS_TypeSupport_i::get_factory_i (const char* type,
-                                      ::DDS::DomainParticipant_ptr dp)
+    DDS_TypeSupport_i::get_factory_i (::DDS::DomainParticipant_ptr dp,
+                                      const char* type)
     {
       DDS4CCM_TRACE ("DDS_TypeSupport_i::get_factory_i");
 
+      DDS_TypeFactory_i* tfi = 0;
       participantfactories::iterator entry = participant_factories.find(dp);
       if (entry != participant_factories.end())
         {
-          if (entry->second.size () == 0UL)
-            {
-              DDS4CCM_DEBUG (DDS4CCM_LOG_LEVEL_ACTION, (LM_DEBUG, DDS4CCM_INFO
-                            "DDS_TypeSupport_i::get_factory_i - "
-                            "No type-factory combinations for DomainParticipant <%@> found\n",
-                            dp));
-              return 0;
-            }
-
-          DDS4CCM_DEBUG (DDS4CCM_LOG_LEVEL_ACTION, (LM_DEBUG, DDS4CCM_INFO
-                        "DDS_TypeSupport_i::get_factory_i - "
-                        "A factory of type <%C> and with DomainParticipant <%@> "
-                        "has been registered\n",
-                        type,
-                        dp));
-
-          // Return factory belonging to the specified type.
+          // We have found the domain participant, now search for a type factory
+          // within the domain participant
           typefactories tf = entry->second;
           typefactories::iterator it = tf.find(type);
           if (it != tf.end())
-            return it->second;
-          else
-            return 0;
+            {
+              tfi = it->second->get_factory ();
+            }
         }
-      DDS4CCM_DEBUG (DDS4CCM_LOG_LEVEL_ACTION, (LM_DEBUG, DDS4CCM_INFO
-                    "DDS_TypeSupport_i::get_factory_i - "
-                    "A factory of type <%C> and with DomainParticipant <%@> "
-                    "is not registered\n",
-                    type,
-                    dp));
-      return 0;
+
+      if (tfi)
+        {
+          DDS4CCM_DEBUG (DDS4CCM_LOG_LEVEL_ACTION, (LM_DEBUG, DDS4CCM_INFO
+                        "DDS_TypeSupport_i::get_factory_i - "
+                        "A factory for domain participant <%@> of type <%C> "
+                        "has been found\n",
+                        dp,
+                        type));
+        }
+      else
+        {
+          DDS4CCM_ERROR (DDS4CCM_LOG_LEVEL_ERROR, (LM_ERROR, DDS4CCM_INFO
+                        "DDS_TypeSupport_i::get_factory_i - "
+                        "A factory for domain participant <%@> of type <%C> "
+                        "has not been found\n",
+                        dp,
+                        type));
+        }
+
+      return tfi;
     }
 
     bool
-    DDS_TypeSupport_i::register_factory_i (const char* type,
-                                          DDS_TypeFactory_i* f,
-                                          ::DDS::DomainParticipant_ptr dp)
+    DDS_TypeSupport_i::register_type (::DDS::DomainParticipant_ptr dp,
+                                      const char* type, DDS_TypeFactory_i* f)
     {
-      DDS4CCM_TRACE ("DDS_TypeSupport_i::register_factory_i");
+      DDS4CCM_TRACE ("DDS_TypeSupport_i::register_type");
 
       participantfactories::iterator dp_entry = participant_factories.find(dp);
 
       if (dp_entry == participant_factories.end())
-        { // entry not found -> insert.
-          // Add the DomainParticipant.
+        {
+          // The domain participant has not been found, insert the domain
+          // participant first
           typefactories tf;
           std::pair <participantfactories::iterator, bool> dp_ret = participant_factories.insert(
             std::pair< ::DDS::DomainParticipant_ptr, typefactories > (dp, tf));
-          if (dp_ret.second == false)
+          if (!dp_ret.second)
             {
               DDS4CCM_ERROR (DDS4CCM_LOG_LEVEL_ERROR, (LM_ERROR, DDS4CCM_INFO
-                            "DDS_TypeSupport_i::register_factory_i - "
+                            "DDS_TypeSupport_i::register_type - "
                             "Unable to create new DomainParticipant entry: "
                             "type <%C> - DomainParticipant <%@>\n",
                             type,
@@ -82,78 +119,114 @@ namespace CIAO
             }
         }
 
-      // DomainParticipant has been added
+      // DomainParticipant is in the list or has been added
       dp_entry = participant_factories.find(dp);
       typefactories tf = dp_entry->second;
       // tf contains the list of type-factory combinations.
       // search for the given type
       typefactories::iterator tf_entry = tf.find(type);
+      bool retval = false;
       if (tf_entry == tf.end())
-        { // Factory not registered for specified type.
+        {
+          // Factory not registered for specified type.
           // Register it
+          DDS_TypeFactory_i_var *tf_var = 0;
+          ACE_NEW_RETURN (tf_var,
+                    DDS_TypeFactory_i_var (f),
+                    false);
+
           std::pair <typefactories::iterator, bool> tf_ret =
-            tf.insert(typefactories::value_type (type, f));
-          if (tf_ret.second == false)
+            tf.insert(typefactories::value_type (type, tf_var));
+          if (tf_ret.second)
+            {
+              DDS4CCM_DEBUG (DDS4CCM_LOG_LEVEL_ACTION, (LM_DEBUG, DDS4CCM_INFO
+                            "DDS_TypeSupport_i::register_type - "
+                            "Created new factory entry for type <%C> for participant <%@>\n",
+                            type, dp));
+              // assign the type-factory combination to the DomainParticipant entry.
+              dp_entry->second = tf;
+              retval = true;
+            }
+          else
             {
               DDS4CCM_ERROR (DDS4CCM_LOG_LEVEL_ERROR, (LM_ERROR, DDS4CCM_INFO
-                            "DDS_TypeSupport_i::register_factory_i - "
-                            "Unable to create new factory entry type <%C>\n",
-                            type));
-              return false;
+                            "DDS_TypeSupport_i::register_type - "
+                            "Unable to create new factory entry type <%C> for participant <%@>\n",
+                            type, dp));
+              delete tf_var;
             }
-          DDS4CCM_DEBUG (DDS4CCM_LOG_LEVEL_ACTION, (LM_DEBUG, DDS4CCM_INFO
-                        "DDS_TypeSupport_i::register_factory_i - "
-                        "Created new factory entry for type <%C>\n",
-                        type));
-          // assign the type-factory combination to the DomainParticipant entry.
-          dp_entry->second = tf;
-          return true;
         }
-      // Unable to register type-factory combination since it already exists.
-      DDS4CCM_ERROR (DDS4CCM_LOG_LEVEL_ERROR, (LM_ERROR, DDS4CCM_INFO
-                    "DDS_TypeSupport_i::register_factory_i - "
-                    "Unable to register type-factory combination since "
-                    "it already exists for type <%C>\n",
-                    type));
-      return false;
+      else
+        {
+          long const refcount = tf_entry->second->_inc_ref ();
+          DDS4CCM_DEBUG (DDS4CCM_LOG_LEVEL_ACTION, (LM_DEBUG, DDS4CCM_INFO
+                        "DDS_TypeSupport_i::register_type - "
+                        "Incremented refcount to <%d> for type-factory for participant <%@> since "
+                        "it already exists for type <%C>\n",
+                        refcount, dp,
+                        type));
+        }
+      return retval;
     }
 
     void
-    DDS_TypeSupport_i::unregister_participant_factory_i (const char * type,
-                                                        ::DDS::DomainParticipant_ptr dp)
+    DDS_TypeSupport_i::unregister_type (::DDS::DomainParticipant_ptr dp,
+                                        const char* type)
     {
-      DDS4CCM_TRACE ("DDS_TypeSupport_i::unregister_participant_factory_i");
+      DDS4CCM_TRACE ("DDS_TypeSupport_i::unregister_type");
 
       participantfactories::iterator dp_entry = participant_factories.find(dp);
 
       if (dp_entry != participant_factories.end())
         {
+          // Found the domain participant
           typefactories tf = dp_entry->second;
           typefactories::iterator it = tf.find(type);
           if (it != tf.end())
             {
-              tf.erase(it);
-              if (tf.size () == 0UL)
-                { // no more entries -> remove the participant from
-                  // the list
-                  participant_factories.erase(dp_entry);
-
+              // Let us drop the refcount on the type factory, when it drops
+              // to zero we delete it
+              long const refcount = it->second->_dec_ref ();
+              if (refcount == 0)
+                {
+                  DDS_TypeFactory_i_var* f_var = it->second;
+                  tf.erase(it);
+                  dp_entry->second = tf;
+                  DDS_TypeFactory_i* f = f_var->get_factory();
+                  delete f;
+                  delete f_var;
                   DDS4CCM_DEBUG (DDS4CCM_LOG_LEVEL_ACTION, (LM_DEBUG, DDS4CCM_INFO
-                                "DDS_TypeSupport_i::unregister_participant_factory_i - "
-                                "Erased entry for participant <%@>\n",
+                                "DDS_TypeSupport_i::unregister_type - "
+                                "Deleted type factory for participant <%@> and type <%C> "
+                                "refcount dropped to zero\n",
                                 dp,
                                 type));
+                  if (tf.size () == 0UL)
+                    { // no more entries -> remove the participant from
+                      // the list
+                      participant_factories.erase(dp_entry);
+
+                      DDS4CCM_DEBUG (DDS4CCM_LOG_LEVEL_ACTION, (LM_DEBUG, DDS4CCM_INFO
+                                    "DDS_TypeSupport_i::unregister_type - "
+                                    "Erased participant entry for participant <%@>, "
+                                    "no type factories left anymore\n",
+                                    dp));
+                    }
                 }
               else
                 {
-                  // assign the type-factory combination to the DomainParticipant entry.
-                  dp_entry->second = tf;
+                  DDS4CCM_DEBUG (DDS4CCM_LOG_LEVEL_ACTION, (LM_DEBUG, DDS4CCM_INFO
+                                "DDS_TypeSupport_i::unregister_type - "
+                                "Decremented refcount to <%d> for factory for participant <%@> and type <%C>\n",
+                                refcount,
+                                dp,
+                                type));
                 }
             }
           else
             {
               DDS4CCM_ERROR (DDS4CCM_LOG_LEVEL_ERROR, (LM_ERROR, DDS4CCM_INFO
-                            "DDS_TypeSupport_i::unregister_participant_factory_i - "
+                            "DDS_TypeSupport_i::unregister_type - "
                             "Could not find the correct factory belonging to participant <%@> "
                             "and type <%C>. Unable to remove.\n",
                             dp,
@@ -163,50 +236,11 @@ namespace CIAO
       else
         {
           DDS4CCM_ERROR (DDS4CCM_LOG_LEVEL_ERROR, (LM_ERROR, DDS4CCM_INFO
-                        "DDS_TypeSupport_i::unregister_participant_factory_i - "
+                        "DDS_TypeSupport_i::unregister_type - "
                         "Could not find the entry for participant <%@>. "
                         "Unable to remove.\n",
                         dp));
         }
-    }
-
-
-    bool
-    DDS_TypeSupport_i::register_type (const char* type, DDS_TypeFactory_i* f,
-                                      ::DDS::DomainParticipant_ptr dp)
-    {
-      DDS4CCM_TRACE ("DDS_TypeSupport_i::register_type");
-
-      if (get_factory_i (type, dp))
-        {
-          DDS4CCM_DEBUG (DDS4CCM_LOG_LEVEL_ACTION, (LM_INFO, DDS4CCM_INFO
-                        "DDS_TypeSupport_i::register_type - "
-                        "Won't register factory for type <%C> since it already exist\n",
-                        type));
-          return false;
-        }
-
-      DDS4CCM_DEBUG (DDS4CCM_LOG_LEVEL_ACTION, (LM_INFO, DDS4CCM_INFO
-                    "DDS_TypeSupport_i::register_type - "
-                    "Going to register factory for type <%C> and participant <%@>\n",
-                    type, dp));
-
-      return register_factory_i (type, f, dp);
-    }
-
-    DDS_TypeFactory_i*
-    DDS_TypeSupport_i::unregister_type (const char* type, ::DDS::DomainParticipant_ptr dp)
-    {
-      DDS4CCM_TRACE ("DDS_TypeSupport_i::unregister_type");
-
-      DDS_TypeFactory_i * f = get_factory_i(type, dp);
-      unregister_participant_factory_i(type, dp);
-
-      DDS4CCM_DEBUG (DDS4CCM_LOG_LEVEL_ACTION, (LM_INFO, DDS4CCM_INFO
-                    "DDS_TypeSupport_i::unregister_type - "
-                    "Unregistered factory for type <%C> and participant <%@>\n",
-                    type, dp));
-      return f;
     }
 
     ::DDS::DataWriter_ptr
@@ -218,19 +252,23 @@ namespace CIAO
 
       const char* type = dw->get_topic ()->get_type_name();
 
-      DDS_TypeFactory_i *f = get_factory_i(type, dp);
+      DDS_TypeFactory_i *f = get_factory_i(dp, type);
       if (f)
         {
           DDS4CCM_DEBUG (DDS4CCM_LOG_LEVEL_ACTION, (LM_INFO, DDS4CCM_INFO
                         "DDS_TypeSupport_i::create_datawriter - "
-                        "Created DDSDataWriter for type <%C>\n", type));
+                        "Created DDSDataWriter for type <%C> for "
+                        "participant <%@>\n", type, dp));
 
           return f->create_datawriter (dw, dp, pub);
         }
-
-      DDS4CCM_ERROR (DDS4CCM_LOG_LEVEL_ERROR, (LM_ERROR, DDS4CCM_INFO
-                    "DDS_TypeSupport_i::create_datawriter - "
-                    "Error creating DDSDataWriter for type <%C>\n", type));
+      else
+        {
+          DDS4CCM_ERROR (DDS4CCM_LOG_LEVEL_ERROR, (LM_ERROR, DDS4CCM_INFO
+                        "DDS_TypeSupport_i::create_datawriter - "
+                        "Error creating DDSDataWriter for type <%C> "
+                        "for participant <%@>\n", type, dp));
+        }
 
       return ::DDS::DataWriter::_nil ();
     }
@@ -243,19 +281,23 @@ namespace CIAO
       DDS4CCM_TRACE ("DDS_TypeSupport_i::create_datareader");
 
       const char* type = dr->get_topicdescription ()->get_type_name();
-      DDS_TypeFactory_i *f = get_factory_i(type, dp);
+      DDS_TypeFactory_i *f = get_factory_i(dp, type);
       if (f)
         {
           DDS4CCM_DEBUG (DDS4CCM_LOG_LEVEL_ACTION, (LM_INFO, DDS4CCM_INFO
                         "DDS_TypeSupport_i::create_datareader - "
-                        "Created DDSDataReader for type <%C>\n", type));
+                        "Created DDSDataReader for type <%C> "
+                        "for participant <%@>\n", type, dp));
 
           return f->create_datareader (dr, dp, sub);
         }
-
-      DDS4CCM_ERROR (DDS4CCM_LOG_LEVEL_ERROR, (LM_ERROR, DDS4CCM_INFO
-                    "DDS_TypeSupport_i::create_datareader - "
-                    "Error creating DDSDataReader for type <%C>\n", type));
+      else
+        {
+          DDS4CCM_ERROR (DDS4CCM_LOG_LEVEL_ERROR, (LM_ERROR, DDS4CCM_INFO
+                        "DDS_TypeSupport_i::create_datareader - "
+                        "Error creating DDSDataReader for type <%C> "
+                        "for participant <%@>\n", type, dp));
+        }
 
       return ::DDS::DataReader::_nil ();
     }
