@@ -62,43 +62,64 @@ namespace CIAO
       }
     };
 
+    /**
+     * Helper class to administrate the type factory and how many times
+     * it has been registered
+     */
+    class DDS_TypeFactory_i_var
+    {
+      public:
+        DDS_TypeFactory_i_var (DDS_TypeFactory_i* tf);
+        ~DDS_TypeFactory_i_var (void);
+
+        DDS_TypeFactory_i* get_factory ();
+
+        /**
+         * Increments the reference count
+         */
+        long _inc_ref ();
+        /**
+         * Decrements the reference count
+         */
+        long _dec_ref ();
+
+      private:
+        long ref_count_;
+        DDS_TypeFactory_i* tf_;
+    };
+
     class DDS4CCM_NDDS_Export DDS_TypeSupport_i
     {
     public:
       /**
-        * @name close
         * Clears all internal maps, freeing the memory.
         */
       static void close (void);
 
       /**
-        * @name register_tye
         * Registering a type-factory combination per DomainParticipant.
-        * Returns false if insertions to one of the maps fails or if there's
+        * @retval false Insertions to one of the maps fails or if there's
         * already a factory for the given type registered.
-        * Returns true if insertions succeeds.
+        * @retval true Insertions succeeded
         */
-      static bool register_type (const char* type, DDS_TypeFactory_i* factory,
-                                 ::DDS::DomainParticipant_ptr dp);
+      static bool register_type (::DDS::DomainParticipant_ptr dp,
+                                 const char* type, DDS_TypeFactory_i* factory);
 
       /**
-        * @name unregister_tye
         * Unregistering a type-factory combination for a specific
-        * DomainParticipant. If the combination cannot be found,
-        * this method returns nil.
+        * DomainParticipant. At the moment the type factory isn't used anymore
+        * it is automatically destructed
         */
-      static DDS_TypeFactory_i * unregister_type (const char* type,
-                                                  ::DDS::DomainParticipant_ptr dp);
+      static void unregister_type (::DDS::DomainParticipant_ptr dp,
+                                   const char* type);
 
       /**
-        * @name create_datawriter
         * Create a type specific datawriter
         */
       static ::DDS::DataWriter_ptr create_datawriter (DDSDataWriter* dw,
                                                       ::DDS::DomainParticipant_ptr dp,
                                                       ::DDS::Publisher_ptr pub);
       /**
-        * @name create_datawriter
         * Create a type specific datareader
         */
       static ::DDS::DataReader_ptr create_datareader (DDSDataReader* dr,
@@ -108,38 +129,19 @@ namespace CIAO
       DDS_TypeSupport_i (void);
       ~DDS_TypeSupport_i (void);
 
-      typedef std::map < ACE_CString, DDS_TypeFactory_i* > typefactories;
+      /// Store for a specific DDS type a type factory var with its own refcount
+      typedef std::map < ACE_CString, DDS_TypeFactory_i_var* > typefactories;
 
+      /// For each domain participant we store a map with type factories for the
+      /// types that participant has
       typedef std::map< ::DDS::DomainParticipant_ptr, typefactories > participantfactories;
       static participantfactories participant_factories;
 
       /**
-        * @name get_factory_i
         * Searches for a TypeFactory, based on a type and DomainParticipant
         */
-      static DDS_TypeFactory_i* get_factory_i (const char* type,
-                                              ::DDS::DomainParticipant_ptr dp);
-
-      /**
-        * @name register_factory_i
-        * Insert a new type-factory combination per DomainParticipant and type.
-        * Returns true if no factory for the given type was registered.
-        * Returns false if insertions to the internal lists fail.
-        */
-      static bool register_factory_i (const char* type,
-                                      DDS_TypeFactory_i* f,
-                                      ::DDS::DomainParticipant_ptr dp);
-
-      /**
-        * @name unregister_participant_factory_i
-        * Erasing the registered type-factory combination per DomainParticipant.
-        * If the latest type-factory combination is removed, the DomainParticipant
-        * will also be removed from the internal lists.
-        * This method does not free any memory!
-        */
-      static void unregister_participant_factory_i (const char * type,
-                                                    ::DDS::DomainParticipant_ptr dp);
-
+      static DDS_TypeFactory_i* get_factory_i (::DDS::DomainParticipant_ptr dp,
+                                               const char* type);
     };
   }
 }
